# real-time-ml-system

./: .gitignore  README.md
docker-compose/: Makefile  backfill_pipeline.yml  clickhouse.yml  feature_live_pipeline.yml  redpanda.yml
services/features_dashboard/: Makefile  pyproject.toml
services/features_dashboard/app/: backend.py  config.py  frontend.py  plot_ohlcv.py
services/price_predictor/: README.md  pyproject.toml
services/price_predictor/app/: config.py  feature_engineering.py  ohlcv_features_reader.py  training.py
services/price_predictor/app/models/: __init__.py  current_price_baseline.py  moveing_average_baseline.py  xgboost_model.py
services/topic_to_feature_store/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/topic_to_feature_store/app/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
services/trade_producer/app/: config.py  enums.py  main.py
services/trade_producer/app/trade_producers/: bybit_spot_trades_producer.py  kraken_trades_connector.py
services/trade_producer/app/trades_connectors/: __init__.py  bybit_spot_trades_connector.py  exceptions.py  kraken_historical_trades_connector.py  kraken_trades_connector.py
services/trade_producer/code/app/: config.py  enums.py  main.py
services/trade_producer/code/app/abstract/: __init__.py  trades_connector.py
services/trade_producer/code/app/schemas/: trade_schema.py
services/trade_producer/code/app/trades_connectors/: __init__.py  bybit_spot_trades_connector.py  exceptions.py  kraken_historical_trades_connector.py  kraken_trades_connector.py
services/trade_producer/dev_utils/: install_rpk.sh
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_producer/src/abstract/: __init__.py  trade_producer.py
services/trade_producer/src/trade_producers/: bybit_spot_trade_connector.py  bybit_spot_trades_connector.py  kraken_trade_producer.py  kraken_trades_connector.py
services/trade_to_ohlcv/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
services/trade_to_ohlcv/app/: config.py  main.py
