[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["fdoooch <fdoooch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
streamlit = "^1.38.0"
hopsworks = "^3.7.0"
pydantic-settings = "^2.5.2"
bokeh = "2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
