[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["fdoooch <fdoooch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic-settings = "^2.5.2"
hopsworks = "^3.7.0"
scikit-learn = "^1.5.2"
comet-ml = "^3.47.0"
xgboost = "^2.1.1"
ta-lib = "^0.4.32"
optuna = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
