[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["fdoooch <fdoooch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quixstreams = "^2.8.1"
websocket-client = "^1.8.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
