[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["fdoooch <fdoooch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quixstreams = "^2.10.0"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
